test-cases/valid/reject/main_takes_parameters.ul
void main(int argc) {
    // Main must take no formal parameters.
}
